--- a/api/views/welcome/index.jade
+++ b/api/views/welcome/index.jade
@@ -2,5 +2,5 @@ extends ../layouts/default
 
 block body
 	div.jumbotron
-		h1 Hello!
-		p Hi!
+		h1 #{title}
+		p Sails.js and Backbone.js application setup boilerplate using Stylus, CoffeeScript, Jade and Handlebars.js.
