--- a/api/views/authorization/login.jade
+++ b/api/views/authorization/login.jade
@@ -1,11 +1,17 @@
 extends ../layouts/default
 
 block body
-	form(method='post', action='/process')
-		div.form-group
-			label(for='usernameInput') Username
-			input#usernameInput.form-control(type='email', name='username', placeholder='Enter your username')
-		div.form-group
-			label(for='passwordInput') Password
-			input#usernameInput.form-control(type='password', name='password', placeholder='Enter your password')
-		button.btn.btn-primary(type='submit') Authorize
+	form.ui.form.segment(method='post', action='/process')
+		div.field
+			label Username
+			div.ui.left.labeled.input
+				input(type='text', name='username', placeholder='Username')
+				div.ui.corner.label
+					i.icon.asterisk
+		div.field
+			label Password
+			div.ui.left.labeled.input
+				input(type='password', name='password', placeholder='Password')
+				div.ui.corner.label
+					i.icon.asterisk
+		input.ui.blue.submit.button(type='submit', value='Log in')
