--- a/api/views/welcome/index.jade
+++ b/api/views/welcome/index.jade
@@ -1,6 +1,7 @@
 extends ../layouts/default
 
 block body
-	div.jumbotron
-		h1 #{title}
-		p Sails.js and Backbone.js application setup boilerplate using Stylus, CoffeeScript, Jade and Handlebars.js.
+  div.container
+    div.row
+      div.col-md-12
+        p hi
