--- a/api/views/layouts/default.jade
+++ b/api/views/layouts/default.jade
@@ -1,61 +1,33 @@
-!!!
+!!! 5
 head
   title #{title}
   meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1")
   
   // STYLES 
-  link(rel="stylesheet", href="/ui/styles/libraries/normalize.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/button.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/divider.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/header.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/icon.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/image.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/input.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/label.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/loader.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/progress.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/segment.css")
-  link(rel="stylesheet", href="/ui/styles/core/elements/step.css")
-  link(rel="stylesheet", href="/ui/styles/core/collections/breadcrumb.css")
-  link(rel="stylesheet", href="/ui/styles/core/collections/form.css")
-  link(rel="stylesheet", href="/ui/styles/core/collections/grid.css")
-  link(rel="stylesheet", href="/ui/styles/core/collections/menu.css")
-  link(rel="stylesheet", href="/ui/styles/core/collections/message.css")
-  link(rel="stylesheet", href="/ui/styles/core/collections/table.css")
-  link(rel="stylesheet", href="/ui/styles/core/views/comment.css")
-  link(rel="stylesheet", href="/ui/styles/core/views/feed.css")
-  link(rel="stylesheet", href="/ui/styles/core/views/item.css")
-  link(rel="stylesheet", href="/ui/styles/core/views/list.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/accordion.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/chatroom.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/checkbox.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/dimmer.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/dropdown.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/modal.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/nag.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/popup.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/rating.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/reveal.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/search.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/shape.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/sidebar.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/tab.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/transition.css")
-  link(rel="stylesheet", href="/ui/styles/core/modules/video.css")
+  link(rel="stylesheet", href="/ui/styles/libraries/bootstrap.css")
   link(rel="stylesheet", href="/ui/styles/main.css")
   // STYLES END 
   
 body
   // CONTENT 
-  if req.isAuthenticated()
-    ul
-      li
-        a(href='/logout') Welcome, #{JSON.stringify(req.session.passport.user)}! Log out
-  else
-    ul
-      li
-        a(href='/login') Log in
-    
+  nav.navbar.navbar-inverse.navbar-fixed-top
+    div.navbar-header
+      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+        span.sr-only Toggle
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='/') #{title}
+    div.collapse.navbar-collapse.navbar-collapse 
+      ul.nav.navbar-nav.navbar-right
+        li
+          if req.isAuthenticated()
+            a(href='/logout') Log out
+          else
+            a(href='/login') Log in
+
+  p #{message}
+
   block body
   // CONTENT END 
   
@@ -63,32 +35,13 @@ body
   script(type="text/javascript", src="/ui/scripts/libraries/socket.js")
   script(type="text/javascript", src="/ui/scripts/libraries/sails.js")
   script(type="text/javascript", src="/ui/scripts/libraries/jquery.js")
+  script(type="text/javascript", src="/ui/scripts/libraries/bootstrap.js")
   script(type="text/javascript", src="/ui/scripts/libraries/handlebars.js")
   script(type="text/javascript", src="/ui/scripts/libraries/underscore.js")
   script(type="text/javascript", src="/ui/scripts/libraries/backbone.js")
-  script(type="text/javascript", src="/ui/scripts/libraries/bootstrap.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/api.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/state.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/colorize.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/form.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/accordion.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/chatroom.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/checkbox.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/dimmer.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/dropdown.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/modal.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/nag.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/popup.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/rating.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/search.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/shape.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/sidebar.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/transition.js")
-  script(type="text/javascript", src="/ui/scripts/core/modules/video.js")
   // LIBRARIES END 
   
   // TEMPLATES
-  
   // TEMPLATES END 
   
   // MODELS 
