--- a/api/views/authorization/login.jade
+++ b/api/views/authorization/login.jade
@@ -6,13 +6,13 @@ block body
       div.col-md-12
         form.form-horizontal(method='post', action='/process')
           div.form-group
-            label.col-lg-2.control-label Username
-            div.col-lg-10
+            label.col-md-3.control-label Username
+            div.col-md-3
               input.form-control(name='username', type='text', placeholder='Username')
           div.form-group
-            label.col-lg-2.control-label Password
-            .col-lg-10
+            label.col-md-2.control-label Password
+            .col-md-4
               input.form-control(name='password', type='password', placeholder='Password')
           div.form-group
-            div.col-lg-offset-2.col-lg-10
+            div.col-md-offset-2.col-md-10
               button.btn.btn-primary(type='submit') Log in
